--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family:fantasy;
+    font-size: 20px;
 }
 
 body {
@@ -128,4 +129,8 @@ body {
    background-repeat: no-repeat;
    background-attachment: fixed;
  background-size: cover;
+}
+
+#title {
+    font-family:    'Times New Roman', Times, serif
 }
