--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 
 body {
     background-color: rgba(0, 0, 0, 0.784);
+    cursor: url("http://www.rw-designer.com/cursor-view/29487.png"), auto;
 }
 
 #container {
